Added migration with Code-first-EF

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "DbConn": "server=DESKTOP-0HR34F6\\SQLEXPRESS;database=CarParkAvailability;User ID=sa;password=ohdamn;"
+  },
   "AllowedHosts": "*"
 }
