--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,8 @@
   "ConnectionStrings": {
     "DbConn": "server=DESKTOP-0HR34F6\\SQLEXPRESS;database=CarParkAvailability;User ID=sa;password=ohdamn;"
   },
+  "JwtConfig": {
+    "Secret": "SUPERSECRETKEY"
+  },
   "AllowedHosts": "*"
 }
