--- a/appsettings.json
+++ b/appsettings.json
@@ -9,8 +9,8 @@
   "ConnectionStrings": {
     "DbConn": "server=DESKTOP-0HR34F6\\SQLEXPRESS;database=CarParkAvailability;User ID=sa;password=ohdamn;"
   },
-  "JwtConfig": {
-    "Secret": "SUPERSECRETKEY"
+  "ApiSettings": {
+    "ApiUrl": "https://api.data.gov.sg/v1/transport/carpark-availability"
   },
   "AllowedHosts": "*"
 }
